hphp/test/zend/good/ext/mbstring/tests/mb_convert_encoding_basic.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_convert_encoding') or die("skip mb_convert_encoding() is not available in this build");
?>