hphp/test/zend/bad/ext/mbstring/tests/mb_strtolower_variation1.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_strtolower') or die("skip mb_strtolower() is not available in this build");
?>